Edited wiki page through web user interface.

--- a/wiki/ProjectStatus.wiki
+++ b/wiki/ProjectStatus.wiki
@@ -7,7 +7,7 @@ Project status, responsible persons and due dates  are given in the table below
 = Status overview =
 
 ||*Component*||*Responsible*||*Status*||*Planning*||*Remarks*||
-||GUI||Paul||
+||GUI||Paul|| || || ||
 ||Interpreter||Anton|| || || ||
 ||AutoComplete||Marcel|| || ||(voor SQLExpress server database graag een script/batch voor het aanmaken van een nieuwe database ivm svn)||
 ||Sounds||Maarten || || || ||
@@ -22,5 +22,3 @@ Project status, responsible persons and due dates  are given in the table below
   
   
  
-
-
