Edited wiki page through web user interface.

--- a/wiki/GUI.wiki
+++ b/wiki/GUI.wiki
@@ -2,7 +2,7 @@
 
 = Introduction =
 
-Description of Graphical User Interface (GUI)
+Description of the Graphical User Interface (GUI)
 
 
 = Functions =
