Edited wiki page through web user interface.

--- a/wiki/ProjectStatus.wiki
+++ b/wiki/ProjectStatus.wiki
@@ -9,12 +9,12 @@ Project status, responsible persons and due dates  are given in the table below
 
 ||*Component*||*Responsible*||*Status*||*Planning*||*Remarks*||
 ||[GUI]||Paul|| || || ||
-||Interpreter||Anton|| || || ||
-||AutoComplete||Marcel|| || ||(voor SQLExpress server database graag een script/batch voor het aanmaken van een nieuwe database ivm svn)||
-||Sounds||Maarten || || || ||
-||TextToSpeech||Marc|| || || ||
-||HID||Rob/Sjors|| || || ||
-||Hardware||Willem/Sjors|| || || ||
+||[Interpreter]||Anton|| || || ||
+||[AutoComplete]||Marcel|| || ||(voor SQLExpress server database graag een script/batch voor het aanmaken van een nieuwe database ivm svn)||
+||[Sounds]||Maarten || || || ||
+||[TextToSpeech]||Marc|| || || ||
+||[HID]||Rob/Sjors|| || || ||
+||[Hardware]||Willem/Sjors|| || || ||
 
 
 
