--- a/wiki/ProjectStatus.wiki
+++ b/wiki/ProjectStatus.wiki
@@ -13,7 +13,7 @@ Project status, responsible persons and due dates  are given in the table below
 ||[AutoComplete]||Marcel|| || ||(voor SQLExpress server database graag een script/batch voor het aanmaken van een nieuwe database ivm svn)||
 ||[Sounds]||Maarten || || || ||
 ||[TextToSpeech]||Marc|| || || ||
-||[HID]||Rob/Sjors|| || || ||
+||[HID]||Rob/Sjors||Ready|| || ||
 ||[Hardware]||Willem/Sjors|| || || ||
 
 
