Edited wiki page through web user interface.

--- a/wiki/Hardware.wiki
+++ b/wiki/Hardware.wiki
@@ -6,13 +6,13 @@ PC platform hardware with windows XP.
 
 = Details =
 
-- BoxPC HDMI audio working 
-- BoxPC new video drivers, minor issues might be related to TV 
-- WinXP License available (Anton) 
-- Cables available: HDMI-HDMI + HDMI-DVI (for using standard PC monitor) 
-- (extra usb keyboard and mouse required?)
+  * BoxPC HDMI audio working. 
+  * BoxPC new video drivers, minor issues might be related to TV 
+  * WinXP License available (Anton) 
+  * Cables available: HDMI-HDMI + HDMI-DVI (for using standard PC monitor) 
+  * (extra usb keyboard and mouse required?)
 
 Todo: 
-- Autostart program
-- Increase partition size or make extra drive D:\
-- Install visual studio C#
+  * Autostart program
+  * Increase partition size or make extra drive D:\
+  * Install visual studio C#
