--- a/wiki/ProjectStatus.wiki
+++ b/wiki/ProjectStatus.wiki
@@ -26,18 +26,18 @@ _Sjors/Rob_
 _Marc_
  * Command window of text to speech should be hidden and closed when the program is closed
 _Marcel_ 
- * Make database connection in a nice way
+
 _Marcel/Anton_
- * Add word lists to database with the correct offsets
- * Make a script or function for adding Joost specific words easily to the database
- * Remove double words from the word list "`basiswoorden_OpenTaal_110G.txt`" e.g. Ben and ben. Remove the word with the capital.
- * covert all letters on screen to upper case (so they are better readable)
- * Remove debugging buttons/boxes from the main form
+ * Make sure that the wordCnt starting value are ok after a database reset
+
+
+
+ 
 _Anton_
- * Only give next word suggestions when there are 3 or more options in the database to make it hard for regenerate the last sentences. (Privacy issue)
- * Use monospace letters (every char on the screen should have the same width)
- * Print underscore "`_`" in stead of space " " (give user feedback when space button is pressed)(Note that the auto word warping of the textbox will probably not function anymore with underscores)
- * Add auto suggestions the the buttons of the from
+ * Disable typing with normal keyboard in the Output textbox 
+ * Covert all letters on screen to upper case (so they are better readable) auto word suggestions not upper case yet
+ * Remove debugging buttons/boxes from the main form
+ * Use monospace letters (every char on the screen should have the same width) ==> update also font in buttons and settings form
  * Add text to speech button on main form keyboard
  * Finish the settings menu layout
 _Willem_
@@ -50,9 +50,17 @@ _Paul_
  * Start with scanning after character/button is selected. Do not automatic restart when no button is selected.
  * Increase contrast between letter and background
  * Increase contrast between selection bar and letter  
+ * Fix button color only ok after on time scanning. 
 
 _not assigned tasks_
  * Autostart program
+ * Adjust resolution to 1024 * 768 (current resolution of BoxPC) and make sure that the buttons fit on the screen
+
+== Known issues ==
+ * SQL sever: "SQLEXPRESS" fixed instance in code (if problem use "local")
+
+== Possible issues ==
+ * When SQL connection is lost auto word completion does not work anymore
 
 == Results first demo for Joost ==
 Use software version r82 for demonstration to Joost on 13-11-2009.
