--- a/wiki/ProjectStatus.wiki
+++ b/wiki/ProjectStatus.wiki
@@ -26,13 +26,9 @@ _Sjors/Rob_
 _Marc_
  * Command window of text to speech should be hidden and closed when the program is closed
 _Marcel_ 
-
+ * Make batch file that imports the correct data to the database (run SQL command "Generate AutoComplete Database.sql")
 _Marcel/Anton_
  * Make sure that the wordCnt starting value are ok after a database reset
-
-
-
- 
 _Anton_
  * Disable typing with normal keyboard in the Output textbox 
  * Covert all letters on screen to upper case (so they are better readable) auto word suggestions not upper case yet
@@ -40,6 +36,7 @@ _Anton_
  * Use monospace letters (every char on the screen should have the same width) ==> update also font in buttons and settings form
  * Add text to speech button on main form keyboard
  * Finish the settings menu layout
+ * Check maximum word length of auto suggestion words (also make buttons wider)
 _Willem_
  * Test WPF on the BoxPC
  * Setup database on the BoxPC correctly
@@ -51,16 +48,21 @@ _Paul_
  * Increase contrast between letter and background
  * Increase contrast between selection bar and letter  
  * Fix button color only ok after on time scanning. 
-
+ * Start scanning in auto suggestion list after pressing auto button
+_Everyone_
+ * Add Joost specific words to "Joost_woorden.csv" in folder "woordenlijsten" on the SVN server
 _not assigned tasks_
  * Autostart program
  * Adjust resolution to 1024 * 768 (current resolution of BoxPC) and make sure that the buttons fit on the screen
+ * Make it possible to switch of next word prediction
+ * Make it possible to clear the next word database
 
 == Known issues ==
  * SQL sever: "SQLEXPRESS" fixed instance in code (if problem use "local")
 
 == Possible issues ==
  * When SQL connection is lost auto word completion does not work anymore
+ * Path in SQL file for database generation ("Generate AutoComplete Database.sql") is fixed
 
 == Results first demo for Joost ==
 Use software version r82 for demonstration to Joost on 13-11-2009.
