--- a/wiki/ProjectStatus.wiki
+++ b/wiki/ProjectStatus.wiki
@@ -24,7 +24,7 @@ Project status, responsible persons and due dates  are given in the table below
 _Sjors/Rob_
  * Button hardware should be reconsidered
 _Marc_
- * Command window of text to speech should be hidden and closed when the program is closed
+ * ~~Command window of text to speech should be hidden and closed when the program is closed~~
  * TTS se to male voice.
 _Marcel_ 
  * Make batch file that imports the correct data to the database (run SQL command "Generate AutoComplete Database.sql") _the script now on the SVN could not find a server on the BoxPC_
@@ -35,9 +35,9 @@ _Anton_
  * ~~Disable typing with normal keyboard in the Output textbox~~ 
  * ~~Covert all letters on screen to upper case (so they are better readable) auto word suggestions not upper case yet~~
  * Remove debugging buttons/boxes from the main form
- * Use monospace letters (every char on the screen should have the same width) ==> update also font in buttons and settings form
+ * ~~Use monospace letters (every char on the screen should have the same width) ==> update also font in buttons and settings form~~
  * Add text to speech button on main form keyboard
- * Finish the settings menu layout
+ * ~~Finish the settings menu layout~~
  * ~~Check maximum word length of auto suggestion words (also make buttons wider~~
  * Define max word length in autocomplete.cs.
  * Auto scroll down in output txt box when more than two line are enterd.
@@ -54,8 +54,7 @@ _Paul_
  * ~~Fix button color only ok after on time scanning.~~ 
  * ~~Start scanning in auto suggestion list after pressing auto button~~
 _Everyone_
- * ~~Add Joost specific words to "Joost_woorden.csv" in folder "woordenlijsten" on the 
-SVN server.~~
+ * ~~Add Joost specific words to "Joost_woorden.csv" in folder "woordenlijsten" on the SVN server.~~
  * Add Joost_woorden.CSV to database.
 _not assigned tasks_
  * Autostart program
@@ -70,24 +69,21 @@ _not assigned tasks_
  * When SQL connection is lost auto word completion does not work anymore
  * Path in SQL file for database generation ("Generate AutoComplete Database.sql") is fixed
 
-== Nice to have ==
-* Center the text in setting buttons menu to te left.
-
 == Results first demo for Joost ==
 Use software version r82 for demonstration to Joost on 13-11-2009.
 Note that the auto completion database was working during the demonstration. 
- * Increase font size of output and autosuggestion fields
- * covert all letters on screen to upper case (so they are better readable)
- * Use monospace letters (every char on the screen should have the same width)
- * Print underscore "`_`" in stead of space " " (give user feedback when space button is pressed)
- * Auto start scanning after a letter is selected. Do not automatic restart when no button is selected.
+ * ~~Increase font size of output and autosuggestion fields~~
+ * ~~covert all letters on screen to upper case (so they are better readable)~~
+ * ~~Use monospace letters (every char on the screen should have the same width)~~
+ * ~~Print underscore "`_`" in stead of space " " (give user feedback when space button is pressed)~~
+ * ~~Auto start scanning after a letter is selected. Do not automatic restart when no button is selected.~~
  * Button hardware should be reconsidered
- * Increase contrast between letter and background
- * Increase contrast between selection bar and letter
+ * ~~Increase contrast between letter and background~~
+ * ~~Increase contrast between selection bar and letter~~
  * Optional: make font adjustment per individual key possible (request of Ad)
 == Optional features ==
  * Make is possible for Joost to type some sentences in advance and save, email or SMS them.  
-
+* Center the text in setting buttons menu to te left.
 
 
 
