--- a/wiki/ProjectStatus.wiki
+++ b/wiki/ProjectStatus.wiki
@@ -46,7 +46,7 @@ _Willem_
  * ~~Test WPF on the BoxPC~~_WPF works fine on the boxPC_
  * Setup database on the BoxPC correctly
 _Paul_
- * Make it possible to switch on and off functions
+ ~~* Make it possible to switch on and off functions~~
  * Make release version and add this version to the download section
  * Finish the settings menu implementation
  * ~~Start with scanning after character/button is selected. Do not automatic restart when no button is selected.~~
