--- a/trunk/SimpleTalk/Properties/Resources.resx
+++ b/trunk/SimpleTalk/Properties/Resources.resx
@@ -117,4 +117,17 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="GenerateAutoCompleteDatabase" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Database\GenerateAutoCompleteDatabase.sql;System.String, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-16</value>
+  </data>
+  <data name="GenerateAutoCompleteDatabase1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Database\GenerateAutoCompleteDatabase.bat;System.String, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
+  <data name="Ja" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\AudioFiles\Ja.wav;System.IO.MemoryStream, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="Nee" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\AudioFiles\Nee.wav;System.IO.MemoryStream, mscorlib, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
