--- a/wiki/ProjectStatus.wiki
+++ b/wiki/ProjectStatus.wiki
@@ -22,16 +22,16 @@ Project status, responsible persons and due dates  are given in the table below
 
 == To do ==
 _Sjors/Rob_
- * Button hardware should be reconsidered
+ * ~~Button hardware should be reconsidered~~
 _Marc_
  * ~~Command window of text to speech should be hidden and closed when the program is closed~~
- * Fix text to speech. Is does not work after merge (older project version on server AD is still working) 
- * TTS set to male voice.
+ * ~~Fix text to speech. Is does not work after merge (older project version on server AD is still working)~~ 
+ * ~~TTS set to male voice.~~ (lukt niet, voor een vervolg project)
 _Marcel_ 
- * Make batch file that imports the correct data to the database (run SQL command "Generate AutoComplete Database.sql") _the script now on the SVN could not find a server on the BoxPC_
+ * ~~~Make batch file that imports the correct data to the database (run SQL command "Generate AutoComplete Database.sql") _the script now on the SVN could not find a server on the BoxPC_~~ (word niet meer gedaan)
 _Marcel/Anton_
- * Make sure that the wordCnt starting value are ok after a database reset
- * Create database in code when not exist.
+ * ~~Make sure that the wordCnt starting value are ok after a database reset~~ nice to have
+ * ~~Create database in code when not exist.~~ (werkt nog niet helemaal ok)
 _Anton_
  * ~~Disable typing with normal keyboard in the Output textbox~~ 
  * ~~Covert all letters on screen to upper case (so they are better readable) auto word suggestions not upper case yet~~
@@ -43,8 +43,8 @@ _Anton_
  * Define max word length in autocomplete.cs. _(postponed until final form layout is ready)_
  * ~~Auto scroll down in output text box when more than two lines are entered.~~
  * ~~Save settings~~
- * call text to speach engine from interperter (make "say" button on abc keyboard functional)
- * call autocompletion engine from interperter on changed text. First move auto complete to Core.cs
+ * ~~call text to speach engine from interperter (make "say" button on abc keyboard functional)~~
+ * ~~call autocompletion engine from interperter on changed text. First move auto complete to Core.cs~~
 _Willem_
  * ~~Test WPF on the BoxPC~~ _WPF works fine on the BoxPC_
  * ~~ Setup database on the BoxPC correctly ~~
@@ -58,19 +58,18 @@ _Paul_
  * ~~Fix button color only ok after on time scanning.~~ 
  * ~~Start scanning in auto suggestion list after pressing auto button~~
  * ~~Adjust scan speed according to scanSpeed setting variable in the Core.cs~~
- * Rethink scanning structure, code is nog stable (option: "EDD" and review the concept ;-) )
+ * ~~Rethink scanning structure, code is nog stable (option: "EDD" and review the concept ;-) )~~
  * ~~Automatically stop selection when stopping the application  (in frmSettings.cs)~~
  * ~~Hack to start autocomplete automatically (in frmMain.cs)~~
 _Everyone_
  * ~~Add Joost specific words to "Joost_woorden.csv" in folder "woordenlijsten" on the SVN server.~~
  * Add Joost_woorden.CSV to database.
  * Finish DeliveryCheckList wiki
- * Find bugs in program, reproduce them and solve or report the bugs
-_not assigned tasks_
- * Autostart program
+ * ~~Find bugs in program, reproduce them and solve or report the bugs
+_not assigned tasks_~~
+ * ~~Autostart program~~
  * Adjust resolution to ~~1024 `*` 768~~ 1366 `*` 768 (native TV resolution and current resolution of BoxPC) and make sure that the buttons fit on the screen
  * ~~Make it possible to switch of next word prediction~~
- * Make it possible to clear the next word database
  * Set the frm  to full screen no windows bar. 
 == Known issues ==
  * SQL sever: "SQLEXPRESS" fixed instance in code (if problem use "local")
@@ -95,7 +94,7 @@ Note that the auto completion database was working during the demonstration.
  * Make is possible for Joost to type some sentences in advance and save, email or SMS them. 
  * Center the text in setting buttons menu to the left.
  * Volume control in te stings window (option use an api to control windows master volume and mute)
-
+ * Make it possible to clear the next word database
 
 
 
